# pixelbot-automation

./: .gitignore  README.md  accounts_batch.json.example  api.env.example  audit.txt  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_local.bat  run_local.sh
.antigravitycli/: 7e22dc33-eb56-468f-bb6d-eaee982ccac7.json
bot/: accounts.py  config.py  database.py  utils.py  worker.py
bot/android_worker/: __init__.py  api_server.py  client.py  config.py  device.py  google_login.py  humanize.py  offer_claim.py  runner.py  security_alert.py
bot/handlers/: __init__.py  admin.py  common.py  user.py  verify.py
bot/ui/: __init__.py  formatting.py  keyboards.py  messages.py
config/: old_pif_caiman.json  proton.conf.example
core/: __init__.py  automation.py  build_props.sh
deploy/: deploy.sh  find_stuck_jobs.py  get_balance.py  master_deploy.py  vps_check.py  vps_deploy.py  vps_diag.py  vps_diagnose.py  vps_exec.py  vps_fix.py  vps_fix_deploy.py  vps_refund_stuck.py  vps_state.py  vps_upload.py  vps_upload_folder.py  vps_verify.py  vps_worker_adb.py
infra/: Dockerfile  docker-compose.yml  extract_magisk.sh  fix_cpuset.sh  fix_vpn_routing.sh  infra.env.example  patch_env.sh  post_boot_magisk.sh  requirements-android.txt  vpn_keeper.sh
infra/graphics_alignment/: GlesSpoofModule.java  README.md  gles_native_spoof.cpp  patch_driver.py
infra/identity/: lsposed_google_one_spoof.md  pif.json  pif_frankel.json  pif_redfin.json  pixel5_redfin_props.txt  pixel_props.txt
infra/mihomo/: config.yaml
tests/: __init__.py  test_accounts.py  test_config.py
